--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "angular-google-places-autocomplete",
-  "version": "0.2.7",
+  "version": "0.3.2",
   "repository": {
     "type": "git",
-    "url": "http://github.com/kuhnza/angular-google-places-autocomplete.git"
+    "url": "https://github.com/tripda/angular-google-places-autocomplete.git"
   },
   "dependencies": {
     "grunt-contrib-cssmin": "^0.10.0"
